feat: add deployment steps for docker-compose in CI/CD workflow

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,3 +35,11 @@ jobs:
       - name: Copy Plugins files to server via SSH
         run: |
             sshpass -p "${{ secrets.KEY }}" scp -o StrictHostKeyChecking=no -r ./dist/plugin/* ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/root/cicd/starter/wp-content/plugins/ale-core/
+
+      - name: Copy docker-compose.yml to server
+        run: |
+            sshpass -p "${{ secrets.KEY }}" scp -o StrictHostKeyChecking=no ./docker-compose.yml ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/root/cicd/starter/
+
+      - name: Deploy with docker-compose
+        run: |
+            sshpass -p "${{ secrets.KEY }}" ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} "cd /root/cicd/starter && docker-compose down && docker-compose up -d"
