fix: update paths for theme and plugin files in CI/CD workflow and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
             WORDPRESS_CONFIG_EXTRA: |
                 define('FS_METHOD', 'direct');
         volumes:
-            - ./dist/theme/:/var/www/html/wp-content/themes/ale
-            - ./dist/plugin:/var/www/html/wp-content/plugins/ale-core
+            - /root/cicd/starter/dist/theme/:/var/www/html/wp-content/themes/ale
+            - /root/cicd/starter/dist/plugin:/var/www/html/wp-content/plugins/ale-core
             - ./.srv/wordpress/:/var/www/html
             - ./.srv/log/:/var/log
             - './.srv/custom.ini:/usr/local/etc/php/conf.d/custom.ini'
